--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         retrofit_version = '2.9.0'
         hilt_version = '2.44'
         lifecycle_version = '2.5.1'
+        nav_version = '2.5.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
