--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,5 @@ dependencies {
 
     // nav
     implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 }
