--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
     // nav
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    // coil
+    implementation "io.coil-kt:coil-compose:2.2.2"
 }
